@@ -69,7 +69,7 @@ i386_lex_no_Werror = yes
 libeu = ../lib/libeu.a
 
 i386_lex_CFLAGS = -Wno-unused-label -Wno-unused-function -Wno-sign-compare
-i386_gendis.o: i386_parse.c i386.mnemonics
+i386_parse.o: i386_parse.c i386.mnemonics
 i386_parse_CFLAGS = -DNMNES=$$(wc -l < i386.mnemonics)
 i386_lex.o: i386_parse.c
 i386_gendis_LDADD = $(libeu) -lm $(libmudflap)
