@@ -1,3 +1,8 @@
+2008-01-21  Roland McGrath  <roland@redhat.com>
+
+	* i386_parse.y: Add sanity check for NMNES macro value.
+	* Makefile.am (i386_parse.o): Fix target in dependency rule.
+
 2008-01-21  Ulrich Drepper  <drepper@redhat.com>
 
 	* Makefile.am (EXTRA_DIST): Remove defs/x86_64.
